Fixed borders on home page
moo

--- a/GoldenEagleOrganics/index.html
+++ b/GoldenEagleOrganics/index.html
@@ -56,8 +56,8 @@
             </nav>
         </div>
     </div>
-    <div class="container" style="padding: 175px 0 0 0 !important">
-        <div class="col-md-8" style="padding: 30px 15px 0 0 !important; border-right: 2px solid #404040">
+    <div class="container" style="padding: 190px 0 0 0 !important">
+        <div class="col-md-8" style="margin-top: 15px; padding: 0 15px 0 0 !important">
             <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
                 <!-- Indicators -->
                 <ol class="carousel-indicators" style="z-index: 1">
@@ -94,9 +94,9 @@
                 </a>
             </div>
         </div>
-        <div class="col-md-4" style="padding: 30px 0 0 15px !important">
+        <div class="col-md-4" style="margin-top: 15px; padding: 0 0 0 15px !important; border-left: 2px solid #404040">
             <img src="GEOPics/placeholder.png" width="100%" />
-            <a href="#"><h3>Blog Title Here</h3></a>
+            <h3 class="black-links"><a href="#">Blog Title Here</a></h3>
             <p>
                 Short blog description here. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris ornare, diam
                 eu posuere venenatis, nisl odio varius lectus, ac porttitor felis lorem ac sem. Aliquam bibendum id mi in aliquam.
@@ -108,13 +108,13 @@
             <button class="btn btn-sm btn-default">Read More</button>
         </div>
         <div class="col-sm-12 col-md-12 col-lg-12" style="margin-top: 15px; padding: 15px 0 0 0; border-top: 1px solid #B88D47">
-            <div class="col-md-4" style="padding-left: 0; padding-right: 0">
-                <img src="GEOPics/placeholder.png" width="100%" />
-            </div>
-            <div class="col-md-4" style="padding-left: 0; padding-right: 0; border-left: 1px solid #404040; border-right: 1px solid #404040">
+            <div class="col-md-4" style="padding-left: 0; padding-right: 0; border-right: 2px solid #404040">
                 <img src="GEOPics/placeholder.png" width="100%" />
             </div>
             <div class="col-md-4" style="padding-left: 0; padding-right: 0">
+                <img src="GEOPics/placeholder.png" width="100%" />
+            </div>
+            <div class="col-md-4" style="padding-left: 0; padding-right: 0; border-left: 2px solid #404040">
                 <img src="GEOPics/placeholder.png" width="100%" />
             </div>
         </div>
