working on product overlays
moo

--- a/GoldenEagleOrganics/index.html
+++ b/GoldenEagleOrganics/index.html
@@ -105,17 +105,18 @@
                 Short blog description here. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris ornare, diam
                 eu posuere venenatis, nisl odio varius lectus, ac porttitor felis lorem ac sem. Aliquam bibendum id mi in aliquam.
             </p>
-            <button class="btn btn-sm btn-default">Read More</button>
+            <button class="btn btn-sm btn-warning">Read More</button>
         </div>
         <div class="col-sm-12 col-md-12 col-lg-12" style="margin-top: 15px; padding: 15px 0 0 0; border-top: 1px solid #B88D47">
-            <div class="col-md-4" style="padding-left: 0; padding-right: 0; border-right: 2px solid #404040">
+            <div class="col-md-4 product-overlay" style="padding-left: 0; padding-right: 0; border-right: 2px solid #404040">
                 <img src="GEOPics/placeholder.png" width="100%" />
             </div>
-            <div class="col-md-4" style="padding-left: 0; padding-right: 0">
+            <div class="col-md-4 product-overlay" style="padding-left: 0; padding-right: 0">
                 <img src="GEOPics/placeholder.png" width="100%" />
             </div>
             <div class="col-md-4" style="padding-left: 0; padding-right: 0; border-left: 2px solid #404040">
                 <img src="GEOPics/placeholder.png" width="100%" />
+                <div class="product-overlay"></div>
             </div>
         </div>
     </div>
