--- a/GoldenEagleOrganics/index.html
+++ b/GoldenEagleOrganics/index.html
@@ -27,7 +27,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12" style="font-family:'Times New Roman', Times, serif; color: white; padding-left: 0">
-                    <img src="GEOPics/GEOI.jpg" height="130" style="margin: 10px 20px 10px 0; float: left" />
+                    <a href="index.html"><img src="GEOPics/GEOI.jpg" height="130" style="margin: 10px 20px 10px 0; float: left" /></a>
                     <p style="display:inline; float: right; font-family: Tahoma; color: white; margin-top: 7px">
                         62900 Eagle Rd. <br />
                         Bend, OR 97701<br />
@@ -70,13 +70,13 @@
                 <!-- Wrapper for slides -->
                 <div class="carousel-inner">
                     <div class="item active">
-                        <img class="img-responsive pic-preview" src="GEOPics/placeholder.png" style="width: 100%" title="" alt="">
+                        <img class="img-responsive pic-preview" src="GEOPics/geo01.jpg" style="width: 100%" title="" alt="">
                     </div>
                     <div class="item">
-                        <img class="img-responsive pic-preview" src="GEOPics/placeholder.png" style="width: 100%" title="" alt="">
+                        <img class="img-responsive pic-preview" src="GEOPics/geo02.jpg" style="width: 100%" title="" alt="">
                     </div>
                     <div class="item">
-                        <img class="img-responsive pic-preview" src="GEOPics/placeholder.png" style="width: 100%" title="" alt="">
+                        <img class="img-responsive pic-preview" src="GEOPics/geo03.jpg" style="width: 100%" title="" alt="">
                     </div>
                     <div class="item">
                         <img class="img-responsive pic-preview" src="GEOPics/placeholder.png" style="width: 100%" title="" alt="">
@@ -87,16 +87,16 @@
                 </div>
                 <!-- Controls -->
                 <a class="left carousel-control" href="#carousel-example-generic" data-slide="prev">
-                    <span class="glyphicon glyphicon-chevron-left"></span>
+                    <!--<span class="glyphicon glyphicon-chevron-left"></span>-->
                 </a>
                 <a class="right carousel-control" href="#carousel-example-generic" data-slide="next">
-                    <span class="glyphicon glyphicon-chevron-right"></span>
+                    <!--<span class="glyphicon glyphicon-chevron-right"></span>-->
                 </a>
             </div>
         </div>
         <div class="col-md-4" style="margin-top: 15px; padding: 0 0 0 15px !important; border-left: 2px solid #404040">
-            <img src="GEOPics/placeholder.png" width="100%" />
-            <h3 class="black-links"><a href="#">Blog Title Here</a></h3>
+            <a href="https://www.facebook.com/goldeneagleorganic/?ref=aymt_homepage_panel"><img src="GEOPics/placeholder.png" width="100%" /></a>
+            <h3 class="black-links"><a href="https://www.facebook.com/goldeneagleorganic/?ref=aymt_homepage_panel">Blog Title Here</a></h3>
             <p>
                 Short blog description here. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris ornare, diam
                 eu posuere venenatis, nisl odio varius lectus, ac porttitor felis lorem ac sem. Aliquam bibendum id mi in aliquam.
@@ -105,18 +105,59 @@
                 Short blog description here. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris ornare, diam
                 eu posuere venenatis, nisl odio varius lectus, ac porttitor felis lorem ac sem. Aliquam bibendum id mi in aliquam.
             </p>
-            <button class="btn btn-sm btn-warning">Read More</button>
+            <a href="https://www.facebook.com/goldeneagleorganic/?ref=aymt_homepage_panel" style="color: white" class="btn btn-sm btn-warning">Read More</a></a>
         </div>
-        <div class="col-sm-12 col-md-12 col-lg-12" style="margin-top: 15px; padding: 15px 0 0 0; border-top: 1px solid #B88D47">
-            <div class="col-md-4 product-overlay" style="padding-left: 0; padding-right: 0; border-right: 2px solid #404040">
-                <img src="GEOPics/placeholder.png" width="100%" />
+        <div class="col-sm-12 col-md-12 col-lg-12" style="margin-top: 15px; padding: 0; border-top: 1px solid #B88D47">
+            <h2 style="text-align:center; color: #404040; font-family: 'Times New Roman'">- Products & Services GEO Offers -</h2>
+            <div class="col-md-4" style="padding-left: 0; padding-right: 0">
+                <div class="product-overlay">
+                    <a href="products.html">
+                        <img src="GEOPics/beef01.jpg" width="100%" />
+                        <h2 class="hvr-bob">- Beef -</h2>
+                    </a>
+                </div>
             </div>
-            <div class="col-md-4 product-overlay" style="padding-left: 0; padding-right: 0">
-                <img src="GEOPics/placeholder.png" width="100%" />
+            <div class="col-md-4" style="padding-left: 0; padding-right: 0">
+                <div class="product-overlay">
+                    <a href="products.html">
+                        <img src="GEOPics/lamb01.jpg" width="100%" />
+                        <h2 class="hvr-bob">- Lamb -</h2>
+                    </a>
+                </div>
             </div>
-            <div class="col-md-4" style="padding-left: 0; padding-right: 0; border-left: 2px solid #404040">
-                <img src="GEOPics/placeholder.png" width="100%" />
-                <div class="product-overlay"></div>
+            <div class="col-md-4" style="padding-left: 0; padding-right: 0">
+                <div class="product-overlay">
+                    <a href="products.html">
+                        <img src="GEOPics/goat01.jpg" width="100%" />
+                        <h2 class="hvr-bob">- Goat (Chevon) -</h2>
+                    </a>
+                </div>
+            </div>
+        </div>
+        <div class="col-sm-12 col-md-12 col-lg-12" style="margin-top: 15px; padding: 15px 0 0 0">
+            <div class="col-md-6" style="padding-left: 0; padding-right: 0">
+                <div class="product-overlay">
+                    <a href="products.html">
+                        <img src="GEOPics/hay01.jpg" width="100%" />
+                        <h2 class="hvr-bob">- Hay -</h2>
+                    </a>
+                </div>
+            </div>
+            <div class="col-md-6" style="padding-left: 0; padding-right: 0">
+                <div class="product-overlay">
+                    <a href="products.html">
+                        <img src="GEOPics/alfalfa01.jpg" width="100%" />
+                        <h2 class="hvr-bob">- Alfalfa -</h2>
+                    </a>
+                </div>
+            </div>
+        </div>
+        <div class="col-sm-12 col-md-12 col-lg-12" style="margin-top: 15px; padding: 15px 0 0 0">
+            <div class="product-overlay">
+                <a href="products.html">
+                    <img src="GEOPics/custFarmServ01.jpg" width="100%" />
+                    <h2 class="hvr-bob">- Custom Farming Services -</h2>
+                </a>
             </div>
         </div>
     </div>
