--- a/GoldenEagleOrganics/products.html
+++ b/GoldenEagleOrganics/products.html
@@ -27,7 +27,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12" style="font-family:'Times New Roman', Times, serif; color: white; padding-left: 0">
-                    <img src="GEOPics/GEOI.jpg" height="130" style="margin: 10px 20px 10px 0; float: left" />
+                    <a href="index.html"><img src="GEOPics/GEOI.jpg" height="130" style="margin: 10px 20px 10px 0; float: left" /></a>
                     <p style="display:inline; float: right; font-family: Tahoma; color: white; margin-top: 7px">
                         62900 Eagle Rd. <br />
                         Bend, OR 97701<br />
@@ -56,7 +56,7 @@
             </nav>
         </div>
     </div>
-    <div class="container" style="padding: 175px 0 0 0 !important">
+    <div class="container" style="padding: 190px 0 0 0 !important">
 
     </div>
     <footer class="text-center" style="min-height: 100px; background-color: #b88d47; margin-top: 250px">
