--- a/GoldenEagleOrganics/contact.html
+++ b/GoldenEagleOrganics/contact.html
@@ -26,7 +26,7 @@
     <div class="col-md-12" style="min-height:150px; background-color: #b88d47; position: fixed; z-index: 3">
         <div class="container">
             <div class="row">
-                <div class="col-md-12" style="font-family:'Times New Roman', Times, serif; color: white; padding-left: 0">
+                <div class="col-md-12" style="font-family:'Times New Roman', Times, serif; color: white; padding-left: 0; padding-right: 0">
                     <a href="index.html"><img src="GEOPics/GEOI.jpg" height="130" style="margin: 10px 20px 10px 0; float: left" /></a>
                     <p style="display:inline; float: right; font-family: Tahoma; color: white; margin-top: 7px">
                         62900 Eagle Rd. <br />
@@ -48,7 +48,20 @@
                 <div class="container-fluid">
                     <ul class="nav navbar-nav navbar-style">
                         <li class="hvr-wobble-horizontal"><a href="index.html">Home</a></li>
-                        <li class="hvr-wobble-horizontal"><a href="products.html">Products</a></li>
+                        <li class="hvr-wobble-horizontal dropdown">
+                            <a class="dropdown-toggle" data-toggle="dropdown" href="">
+                                Products
+                                <span class="caret"></span>
+                            </a>
+                            <ul class="dropdown-menu" style="text-align:center">
+                                <li><a href="#">Beef</a></li>
+                                <li><a href="#">Lamb</a></li>
+                                <li><a href="#">Goat</a></li>
+                                <li><a href="#">Hay</a></li>
+                                <li><a href="#">Alfalfa</a></li>
+                                <li><a href="#">Custom Farming</a></li>
+                            </ul>
+                        </li>
                         <li class="hvr-wobble-horizontal"><a href="services.html">About</a></li>
                         <li class="active hvr-wobble-horizontal"><a href="contact.html">Contact</a></li>
                     </ul>
@@ -57,7 +70,21 @@
         </div>
     </div>
     <div class="container" style="padding: 190px 0 0 0 !important">
-
+        <div class="col-md-8" style="margin-top: 15px; padding: 0 !important">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1427.845649891845!2d-121.25090347618487!3d44.08428614295538!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x54b8cf644ffd41df%3A0x121ec864a946e420!2s62900+Eagle+Rd%2C+Bend%2C+OR+97701!5e1!3m2!1sen!2sus!4v1467073674783" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+        </div>
+        <div class="col-md-4" style="margin-top: 15px; padding: 0 !important">
+            <h2 style="text-decoration: underline; margin-top: 0">Contact Information:</h2>
+            <p>Brian Lepore:</p>
+            <p>Cell: (541)-214-5467</p>
+            <p>
+                Address:
+                62900 Eagle Rd. <br />
+                Bend, OR 97701<br />
+                (541)-214-5467<br />
+            </p>
+            <p>Email: <a href="mailto:brian@goldeneagleorganics.com">brian@goldeneagleorganics.com"</a></p>
+        </div>
     </div>
     <footer class="text-center" style="min-height: 100px; background-color: #b88d47; margin-top: 250px">
         <img src="GEOPics/GEOCrest.png" width="80" style="padding-top: 10px" />
