--- a/GoldenEagleOrganics/services.html
+++ b/GoldenEagleOrganics/services.html
@@ -26,7 +26,7 @@
     <div class="col-md-12" style="min-height:150px; background-color: #b88d47; position: fixed; z-index: 3">
         <div class="container">
             <div class="row">
-                <div class="col-md-12" style="font-family:'Times New Roman', Times, serif; color: white; padding-left: 0">
+                <div class="col-md-12" style="font-family:'Times New Roman', Times, serif; color: white; padding-left: 0; padding-right: 0">
                     <a href="index.html"><img src="GEOPics/GEOI.jpg" height="130" style="margin: 10px 20px 10px 0; float: left" /></a>
                     <p style="display:inline; float: right; font-family: Tahoma; color: white; margin-top: 7px">
                         62900 Eagle Rd. <br />
@@ -48,7 +48,20 @@
                 <div class="container-fluid">
                     <ul class="nav navbar-nav navbar-style">
                         <li class="hvr-wobble-horizontal"><a href="index.html">Home</a></li>
-                        <li class="hvr-wobble-horizontal"><a href="products.html">Products</a></li>
+                        <li class="hvr-wobble-horizontal dropdown">
+                            <a class="dropdown-toggle" data-toggle="dropdown" href="">
+                                Products
+                                <span class="caret"></span>
+                            </a>
+                            <ul class="dropdown-menu" style="text-align:center">
+                                <li><a href="#">Beef</a></li>
+                                <li><a href="#">Lamb</a></li>
+                                <li><a href="#">Goat</a></li>
+                                <li><a href="#">Hay</a></li>
+                                <li><a href="#">Alfalfa</a></li>
+                                <li><a href="#">Custom Farming</a></li>
+                            </ul>
+                        </li>
                         <li class="active hvr-wobble-horizontal"><a href="services.html">About</a></li>
                         <li class="hvr-wobble-horizontal"><a href="contact.html">Contact</a></li>
                     </ul>
