FA and contacts
moo

--- a/GoldenEagleOrganics/contact.html
+++ b/GoldenEagleOrganics/contact.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Horse Care And Boarding">
-    <meta name="keywords" content="Golden, Eagle, Organics, Pasture, Meats">
+    <meta name="keywords" content="Golden, Eagle, Organics, Meats">
     <meta name="author" content="Devin Magee">
     <meta http-equiv="last-modified" content="2016-06-22@11:00:00 PST" />
     <title>Golden Eagle Organics Inc.</title>
@@ -13,6 +13,7 @@
     <link href="siteCss/BSOverride.css" rel="stylesheet">
     <link href="siteCss/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="siteCss/Hover/hover-min.css" rel="stylesheet">
+    <link href="siteCss/icons.less" rel="stylesheet">
     <link rel="icon" href="GEOPics/GEOItab.ico">
     <script src="js/jquery.js"></script>
     <script src="js/bootstrap.min.js"></script>
@@ -70,20 +71,23 @@
         </div>
     </div>
     <div class="container" style="padding: 190px 0 0 0 !important">
-        <div class="col-md-8" style="margin-top: 15px; padding: 0 !important">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1427.845649891845!2d-121.25090347618487!3d44.08428614295538!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x54b8cf644ffd41df%3A0x121ec864a946e420!2s62900+Eagle+Rd%2C+Bend%2C+OR+97701!5e1!3m2!1sen!2sus!4v1467073674783" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
-        </div>
-        <div class="col-md-4" style="margin-top: 15px; padding: 0 !important">
-            <h2 style="text-decoration: underline; margin-top: 0">Contact Information:</h2>
-            <p>Brian Lepore:</p>
-            <p>Cell: (541)-214-5467</p>
-            <p>
+        <div class="col-md-12" style="margin-top: 15px; padding: 0 !important">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1427.845649891845!2d-121.25090347618487!3d44.08428614295538!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x54b8cf644ffd41df%3A0x121ec864a946e420!2s62900+Eagle+Rd%2C+Bend%2C+OR+97701!5e1!3m2!1sen!2sus!4v1467073674783" width="600" height="450" frameborder="0" style="border:0; float: left; margin-right: 15px" allowfullscreen></iframe>
+            <h1 style="text-decoration: underline; margin-top: 0">Contact Information:</h1>
+            <h2>Brian Lepore:</h2>
+            <h3 style="text-decoration: underline">Address:</h3>
+            <h4>
                 Address:
                 62900 Eagle Rd. <br />
                 Bend, OR 97701<br />
-                (541)-214-5467<br />
-            </p>
-            <p>Email: <a href="mailto:brian@goldeneagleorganics.com">brian@goldeneagleorganics.com"</a></p>
+            </h4>
+            <h3 style="text-decoration: underline">
+                <i class="fa fa-envelope" aria-hidden="true"></i>
+                Email:
+            </h3>
+            <h4 class="black-links"><a href="mailto:brian@goldeneagleorganics.com">brian@goldeneagleorganics.com</a></h4>
+            <h3 style="text-decoration: underline">Cell:</h3>
+            <h4>(541)-214-5467</h4>
         </div>
     </div>
     <footer class="text-center" style="min-height: 100px; background-color: #b88d47; margin-top: 250px">
