--- a/GoldenEagleOrganics/services.html
+++ b/GoldenEagleOrganics/services.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Horse Care And Boarding">
-    <meta name="keywords" content="Golden, Eagle, Organics, Pasture, Meats">
+    <meta name="keywords" content="Golden, Eagle, Organics, Meats">
     <meta name="author" content="Devin Magee">
     <meta http-equiv="last-modified" content="2016-06-22@11:00:00 PST" />
     <title>Golden Eagle Organics Inc.</title>
