Added Organic Icons, Made links
moo

--- a/GoldenEagleOrganics/contact.html
+++ b/GoldenEagleOrganics/contact.html
@@ -36,6 +36,9 @@
                         <a class="hvr-pop" href="https://www.facebook.com/goldeneagleorganic/?ref=aymt_homepage_panel"><img src="GEOPics/facebook-square.png" width="50" style="padding: 5px" title="GEOs Facebook" /></a>
                         <a class="hvr-pop" href="mailto:brian@goldeneagleorganics.com"><img src="GEOPics/mail.png" width="50" style="padding: 5px" title="Email GEO" /></a>
                     </p>
+                    <a href="http://www.usda.gov/wps/portal/usda/usdahome?contentidonly=true&contentid=organic-agriculture.html"><img src="GEOPics/usdaorg.png" height="80" class="hvr-pop" style="float: right; padding: 15px 20px 0 10px" /></a>
+                    <a href="https://tilth.org/"><img src="GEOPics/oretil.png" height="80" class="hvr-pop" style="float: right; padding: 15px 10px 0 0px" /></a>
+
                     <h2 style="font-weight: 700">GOLDEN EAGLE</h2>
                     <h2 style="font-weight: 700; margin-top: 0">ORGANICS, INC.</h2>
                     <h4 style="margin-top: 0"><em>"Central Oregon hay and organic pasture raised meats"</em></h4>
@@ -91,8 +94,9 @@
         </div>
     </div>
     <footer class="text-center" style="min-height: 100px; background-color: #b88d47; margin-top: 250px">
-        <img src="GEOPics/GEOCrest.png" width="80" style="padding-top: 10px" />
-        <h2 style="font-family:'Times New Roman', Times, serif; color: white; font-weight: 700; display: inline; vertical-align: middle; margin-left: 15px; margin-right: 25px">GOLDEN EAGLE ORGANICS, INC.</h2>
+        <a href="index.html">
+            <img src="GEOPics/GEOCrest.png" width="80" style="padding-top: 10px" />
+        </a>        <h2 style="font-family:'Times New Roman', Times, serif; color: white; font-weight: 700; display: inline; vertical-align: middle; margin-left: 15px; margin-right: 25px">GOLDEN EAGLE ORGANICS, INC.</h2>
         <a class="hvr-pop" href="https://www.facebook.com/goldeneagleorganic/?ref=aymt_homepage_panel"><img src="GEOPics/facebook-square.png" width="50" style="padding: 5px" title="GEOs Facebook" /></a>
         <a class="hvr-pop" href="mailto:brian@goldeneagleorganics.com"><img src="GEOPics/mail.png" width="50" style="padding: 5px" title="Email GEO" /></a>
     </footer>
