--- a/GoldenEagleOrganics/services.html
+++ b/GoldenEagleOrganics/services.html
@@ -57,12 +57,12 @@
                                 <span class="caret"></span>
                             </a>
                             <ul class="dropdown-menu" style="text-align:center">
-                                <li><a href="#">Beef</a></li>
-                                <li><a href="#">Lamb</a></li>
-                                <li><a href="#">Goat</a></li>
-                                <li><a href="#">Hay</a></li>
-                                <li><a href="#">Alfalfa</a></li>
-                                <li><a href="#">Custom Farming</a></li>
+                                <li><a href="beef.html">Beef</a></li>
+                                <li><a href="lamb.html">Lamb</a></li>
+                                <li><a href="goat.html">Goat</a></li>
+                                <li><a href="hay.html">Hay</a></li>
+                                <li><a href="alfalfa.html">Alfalfa</a></li>
+                                <li><a href="farming.html">Custom Farming</a></li>
                             </ul>
                         </li>
                         <li class="active hvr-wobble-horizontal"><a href="services.html">About</a></li>
