--- a/GoldenEagleOrganics/goat.html
+++ b/GoldenEagleOrganics/goat.html
@@ -13,7 +13,6 @@
     <link href="siteCss/BSOverride.css" rel="stylesheet">
     <link href="siteCss/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="siteCss/Hover/hover-min.css" rel="stylesheet">
-    <link href="siteCss/icons.less" rel="stylesheet">
     <link rel="icon" href="GEOPics/GEOItab.ico">
     <script src="js/jquery.js"></script>
     <script src="js/bootstrap.min.js"></script>
@@ -38,7 +37,6 @@
                     </p>
                     <a href="http://www.usda.gov/wps/portal/usda/usdahome?contentidonly=true&contentid=organic-agriculture.html"><img src="GEOPics/usdaorg.png" height="80" class="hvr-pop" style="float: right; padding: 15px 20px 0 10px" /></a>
                     <a href="https://tilth.org/"><img src="GEOPics/oretil.png" height="80" class="hvr-pop" style="float: right; padding: 15px 10px 0 0px" /></a>
-
                     <h2 style="font-weight: 700">GOLDEN EAGLE</h2>
                     <h2 style="font-weight: 700; margin-top: 0">ORGANICS, INC.</h2>
                     <h4 style="margin-top: 0"><em>"Central Oregon hay and organic pasture raised meats"</em></h4>
@@ -52,7 +50,7 @@
                 <div class="container-fluid">
                     <ul class="nav navbar-nav navbar-style">
                         <li class="hvr-wobble-horizontal"><a href="index.html">Home</a></li>
-                        <li class="hvr-wobble-horizontal dropdown">
+                        <li class="active hvr-wobble-horizontal dropdown">
                             <a class="dropdown-toggle" data-toggle="dropdown" href="">
                                 Products
                                 <span class="caret"></span>
@@ -67,35 +65,20 @@
                             </ul>
                         </li>
                         <li class="hvr-wobble-horizontal"><a href="services.html">About</a></li>
-                        <li class="active hvr-wobble-horizontal"><a href="contact.html">Contact</a></li>
+                        <li class="hvr-wobble-horizontal"><a href="contact.html">Contact</a></li>
                     </ul>
                 </div>
             </nav>
         </div>
     </div>
     <div class="container" style="padding: 190px 0 0 0 !important">
-        <div class="col-md-12" style="margin-top: 15px; padding: 0 !important">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1427.845649891845!2d-121.25090347618487!3d44.08428614295538!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x54b8cf644ffd41df%3A0x121ec864a946e420!2s62900+Eagle+Rd%2C+Bend%2C+OR+97701!5e1!3m2!1sen!2sus!4v1467073674783" width="600" height="450" frameborder="0" style="border:0; float: left; margin-right: 15px" allowfullscreen></iframe>
-            <h1 style="text-decoration: underline; margin-top: 0">Contact Information:</h1>
-            <h2>Brian Lepore:</h2>
-            <h3 style="text-decoration: underline">Address:</h3>
-            <h4>
-                Address:
-                62900 Eagle Rd. <br />
-                Bend, OR 97701<br />
-            </h4>
-            <h3 style="text-decoration: underline">
-                Email:
-            </h3>
-            <h4 class="black-links"><a href="mailto:brian@goldeneagleorganics.com">brian@goldeneagleorganics.com</a></h4>
-            <h3 style="text-decoration: underline">Cell:</h3>
-            <h4>(541)-214-5467</h4>
-        </div>
+
     </div>
     <footer class="text-center" style="min-height: 100px; background-color: #b88d47; margin-top: 250px">
         <a href="index.html">
             <img src="GEOPics/GEOCrest.png" width="80" style="padding-top: 10px" />
-        </a>        <h2 style="font-family:'Times New Roman', Times, serif; color: white; font-weight: 700; display: inline; vertical-align: middle; margin-left: 15px; margin-right: 25px">GOLDEN EAGLE ORGANICS, INC.</h2>
+        </a>
+        <h2 style="font-family:'Times New Roman', Times, serif; color: white; font-weight: 700; display: inline; vertical-align: middle; margin-left: 15px; margin-right: 25px">GOLDEN EAGLE ORGANICS, INC.</h2>
         <a class="hvr-pop" href="https://www.facebook.com/goldeneagleorganic/?ref=aymt_homepage_panel"><img src="GEOPics/facebook-square.png" width="50" style="padding: 5px" title="GEOs Facebook" /></a>
         <a class="hvr-pop" href="mailto:brian@goldeneagleorganics.com"><img src="GEOPics/mail.png" width="50" style="padding: 5px" title="Email GEO" /></a>
     </footer>
