Product defining and touch ups
moo

--- a/GoldenEagleOrganics/index.html
+++ b/GoldenEagleOrganics/index.html
@@ -126,7 +126,7 @@
             <h2 style="text-align:center; color: #404040; font-family: 'Times New Roman'">- Products & Services GEO Offers -</h2>
             <div class="col-md-4">
                 <div class="product-overlay">
-                    <a href="products.html">
+                    <a href="beef.html">
                         <img src="GEOPics/beef01.jpg" width="100%" />
                         <h2 class="hvr-bob">- Beef -</h2>
                     </a>
@@ -134,7 +134,7 @@
             </div>
             <div class="col-md-4">
                 <div class="product-overlay">
-                    <a href="products.html">
+                    <a href="lamb.html">
                         <img src="GEOPics/lamb01.jpg" width="100%" />
                         <h2 class="hvr-bob">- Lamb -</h2>
                     </a>
@@ -142,7 +142,7 @@
             </div>
             <div class="col-md-4">
                 <div class="product-overlay">
-                    <a href="products.html">
+                    <a href="goat.html">
                         <img src="GEOPics/goat01.jpg" width="100%" />
                         <h2 class="hvr-bob">- Goat (Chevon) -</h2>
                     </a>
@@ -152,7 +152,7 @@
         <div class="col-sm-12 col-md-12 col-lg-12" style="margin-top: 15px; padding: 15px 0 0 0">
             <div class="col-md-6">
                 <div class="product-overlay">
-                    <a href="products.html">
+                    <a href="hay.html">
                         <img src="GEOPics/hay01.jpg" width="100%" />
                         <h2 class="hvr-bob">- Hay -</h2>
                     </a>
@@ -160,7 +160,7 @@
             </div>
             <div class="col-md-6">
                 <div class="product-overlay">
-                    <a href="products.html">
+                    <a href="alfalfa.html">
                         <img src="GEOPics/alfalfa01.jpg" width="100%" />
                         <h2 class="hvr-bob">- Alfalfa -</h2>
                     </a>
@@ -169,7 +169,7 @@
         </div>
         <div class="col-sm-12 col-md-12 col-lg-12" style="margin-top: 15px; padding: 15px 15px 0 15px">
             <div class="product-overlay">
-                <a href="products.html">
+                <a href="farming.html">
                     <img src="GEOPics/custFarmServ01.jpg" width="100%" />
                     <h2 class="hvr-bob">- Custom Farming Services -</h2>
                 </a>
