--- a/GoldenEagleOrganics/beef.html
+++ b/GoldenEagleOrganics/beef.html
@@ -72,7 +72,58 @@
         </div>
     </div>
     <div class="container" style="padding: 190px 0 0 0 !important">
-        
+        <div class="col-md-8" style="margin-top: 15px; padding: 0 15px 0 0 !important">
+            <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+                <!-- Indicators -->
+                <ol class="carousel-indicators" style="z-index: 1">
+                    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+                    <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+                    <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+                    <li data-target="#carousel-example-generic" data-slide-to="3"></li>
+                    <li data-target="#carousel-example-generic" data-slide-to="4"></li>
+                </ol>
+                <!-- Wrapper for slides -->
+                <div class="carousel-inner">
+                    <div class="item active">
+                        <img class="img-responsive pic-preview" src="GEOPics/beef01.jpg" style="width: 100%" title="" alt="">
+                    </div>
+                    <div class="item">
+                        <img class="img-responsive pic-preview" src="GEOPics/placeholder.png" style="width: 100%" title="" alt="">
+                    </div>
+                    <div class="item">
+                        <img class="img-responsive pic-preview" src="GEOPics/placeholder.png" style="width: 100%" title="" alt="">
+                    </div>
+                    <div class="item">
+                        <img class="img-responsive pic-preview" src="GEOPics/placeholder.png" style="width: 100%" title="" alt="">
+                    </div>
+                    <div class="item">
+                        <img class="img-responsive pic-preview" src="GEOPics/placeholder.png" style="width: 100%" title="" alt="">
+                    </div>
+                </div>
+                <!-- Controls -->
+                <a class="left carousel-control" href="#carousel-example-generic" data-slide="prev">
+                    <!--<span class="glyphicon glyphicon-chevron-left"></span>-->
+                </a>
+                <a class="right carousel-control" href="#carousel-example-generic" data-slide="next">
+                    <!--<span class="glyphicon glyphicon-chevron-right"></span>-->
+                </a>
+            </div>
+        </div>
+        <div class="col-md-4" style="margin-top: 15px; padding: 0 0 0 15px !important; border-left: 2px solid #404040">
+            <h3 class="black-links"><a href="https://www.facebook.com/goldeneagleorganic/?ref=aymt_homepage_panel">GEO's Beef</a></h3>
+            <p>
+                Short beef description here. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris ornare, diam
+                eu posuere venenatis, nisl odio varius lectus, ac porttitor felis lorem ac sem. Aliquam bibendum id mi in aliquam.
+            </p>
+            <h3 class="black-links"><a href="https://www.facebook.com/goldeneagleorganic/?ref=aymt_homepage_panel">What We Do</a></h3>
+            <p>
+                Short beef description here. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris ornare, diam
+                eu posuere venenatis, nisl odio varius lectus, ac porttitor felis lorem ac sem. Aliquam bibendum id mi in aliquam.
+            </p>
+            <br />
+            <p>Interested in buying from GEO? Click the button below to contact us!</p>
+            <a href="contact.html" style="color: white" class="btn btn-sm btn-warning">Contact GEO</a></a>
+        </div>
     </div>
     <footer class="text-center" style="min-height: 100px; background-color: #b88d47; margin-top: 250px">
         <a href="index.html">
