Removed Links from products
moo

--- a/GoldenEagleOrganics/hay.html
+++ b/GoldenEagleOrganics/hay.html
@@ -110,12 +110,12 @@
             </div>
         </div>
         <div class="col-md-4" style="margin-top: 15px; padding: 0 0 0 15px !important; border-left: 2px solid #404040">
-            <h3 class="black-links"><a href="https://www.facebook.com/goldeneagleorganic/?ref=aymt_homepage_panel">GEO's Hay</a></h3>
+            <h3 style="margin-top: 10px">GEO's Hay</h3>
             <p>
                 Short hay description here. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris ornare, diam
                 eu posuere venenatis, nisl odio varius lectus, ac porttitor felis lorem ac sem. Aliquam bibendum id mi in aliquam.
             </p>
-            <h3 class="black-links"><a href="https://www.facebook.com/goldeneagleorganic/?ref=aymt_homepage_panel">What We Do</a></h3>
+            <h3>What We Do</h3>
             <p>
                 Short hay description here. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris ornare, diam
                 eu posuere venenatis, nisl odio varius lectus, ac porttitor felis lorem ac sem. Aliquam bibendum id mi in aliquam.
