--- a/GoldenEagleOrganics/services.html
+++ b/GoldenEagleOrganics/services.html
@@ -73,7 +73,38 @@
         </div>
     </div>
     <div class="container" style="padding: 190px 0 0 0 !important">
-
+        <div class="col-md-6" style="margin-top: 15px">
+            <img src="GEOPics/profile_blank.png" style="margin-left: 120px" />
+            <h2>Brian Lepore</h2>
+            <p>
+                Short bio description here. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris ornare, diam
+                eu posuere venenatis, nisl odio varius lectus, ac porttitor felis lorem ac sem. Aliquam bibendum id mi in aliquam
+            </p>
+        </div>
+        <div class="col-md-6" style="margin-top: 15px">
+            <img src="GEOPics/profile_blank.png" style="margin-left: 120px" />
+            <h2>Emily Lepore</h2>
+            <p>
+                Short bio description here. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris ornare, diam
+                eu posuere venenatis, nisl odio varius lectus, ac porttitor felis lorem ac sem. Aliquam bibendum id mi in aliquam
+            </p>
+        </div>
+        <div class="col-md-6" style="margin-top: 15px">
+            <img src="GEOPics/profile_blank.png" style="margin-left: 120px" />
+            <h2>Gus Lepore</h2>
+            <p>
+                Short bio description here. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris ornare, diam
+                eu posuere venenatis, nisl odio varius lectus, ac porttitor felis lorem ac sem. Aliquam bibendum id mi in aliquam
+            </p>
+        </div>
+        <div class="col-md-6" style="margin-top: 15px">
+            <img src="GEOPics/profile_blank.png" style="margin-left: 120px" />
+            <h2>Claudia Lepore</h2>
+            <p>
+                Short bio description here. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris ornare, diam
+                eu posuere venenatis, nisl odio varius lectus, ac porttitor felis lorem ac sem. Aliquam bibendum id mi in aliquam
+            </p>
+        </div>
     </div>
     <footer class="text-center" style="min-height: 100px; background-color: #b88d47; margin-top: 250px">
         <a href="index.html">
