--- a/GoldenEagleOrganics/contact.html
+++ b/GoldenEagleOrganics/contact.html
@@ -74,22 +74,23 @@
         </div>
     </div>
     <div class="container" style="padding: 190px 0 0 0 !important">
-        <div class="col-md-12" style="margin-top: 15px; padding: 0 !important">
+        <div class="col-md-12" style="margin-top: 15px; padding: 0 !important; background-color: whitesmoke">
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1427.845649891845!2d-121.25090347618487!3d44.08428614295538!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x54b8cf644ffd41df%3A0x121ec864a946e420!2s62900+Eagle+Rd%2C+Bend%2C+OR+97701!5e1!3m2!1sen!2sus!4v1467073674783" width="600" height="450" frameborder="0" style="border:0; float: left; margin-right: 15px" allowfullscreen></iframe>
             <h1 style="text-decoration: underline; margin-top: 0">Contact Information:</h1>
-            <h2>Brian Lepore:</h2>
-            <h3 style="text-decoration: underline">Address:</h3>
+            <h2 style="color: #B88D47">Brian & Emily Lepore</h2>
+            <h3 style="text-decoration: underline; color: #B88D47">Address:</h3>
             <h4>
-                Address:
                 62900 Eagle Rd. <br />
                 Bend, OR 97701<br />
             </h4>
-            <h3 style="text-decoration: underline">
+            <h3 style="text-decoration: underline; color: #B88D47">
                 Email:
             </h3>
             <h4 class="black-links"><a href="mailto:brian@goldeneagleorganics.com">brian@goldeneagleorganics.com</a></h4>
-            <h3 style="text-decoration: underline">Cell:</h3>
+            <h3 style="text-decoration: underline; color: #B88D47">Cell:</h3>
             <h4>(541)-214-5467</h4>
+            <a class="hvr-pop" href="https://www.facebook.com/goldeneagleorganic/?ref=aymt_homepage_panel"><img src="GEOPics/fblogo.jpg" width="50" style="padding: 5px" title="GEOs Facebook" /></a>
+            <a class="hvr-pop" href="mailto:brian@goldeneagleorganics.com"><img src="GEOPics/emailLogo.jpg" width="50" style="padding: 5px" title="Email GEO" /></a>
         </div>
     </div>
     <footer class="text-center" style="min-height: 100px; background-color: #b88d47; margin-top: 250px">
