--- a/GoldenEagleOrganics/services.html
+++ b/GoldenEagleOrganics/services.html
@@ -73,6 +73,27 @@
         </div>
     </div>
     <div class="container" style="padding: 190px 0 0 0 !important">
+        <div class="row">
+            <div class="col-md-12" style="margin-top: 15px; text-align: center; background-color: #B88D47; color: white">
+                <img src="GEOPics/placeholder.png" width="500" style="margin-top: 15px" />
+                <h2 style="color: #404040">- About The Owners Of GEO -</h2>
+                <p>
+                    The Lepore Family (Brian, Emily, Gus, Claudia and Bodhi the dog) migrated to Central Oregon from East-Central Indiana in 2012.
+                    Brian spent the previous decade researching and teaching agricultural and environmental soil sciences and agroecology.  During
+                    that time, he worked with many farmers in their fields and fell in love with farming. But, academia and farming, done right, are
+                    both jobs that require total focus.  So, in 2012, Brian quit his job at Ball State University with the hope of starting a farm.
+                    Emily found a job as a speech and language pathologist at St. Charles Hospital in Bend and Brian started looking for land to farm.
+                    In 2014, they found two properties: a somewhat neglected 77-acre hay farm about 25 miles north of Bend right on Highway 97 and
+                    a house with a few acres of pasture just outside Bend.  The Lepores live in the Bend house and commute to the Culver property
+                    (so that Emily can get to her hospital job) and get help on the farm and with kid duties from Brian’s family (Vince (“Grand Pops”),
+                    Gisela (“Omi”) and Bruce, Yuki and Louie (Brian’s brother’s family)) who followed them to Central Oregon.  With Brian’s family all
+                    here (they’re not “all there”) and much of Emily’s family on the west coast, Central Oregon was the perfect place to start their
+                    new farming adventure.
+                </p>
+            </div>
+        </div>
+        <h2 style="text-align: center; color: #404040">Meet the GEO Team!</h2>
+        <hr />
         <div class="col-md-6" style="margin-top: 15px">
             <img src="GEOPics/profile_blank.png" style="margin-left: 120px" />
             <h2>Brian Lepore</h2>
@@ -100,6 +121,22 @@
         <div class="col-md-6" style="margin-top: 15px">
             <img src="GEOPics/profile_blank.png" style="margin-left: 120px" />
             <h2>Claudia Lepore</h2>
+            <p>
+                Short bio description here. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris ornare, diam
+                eu posuere venenatis, nisl odio varius lectus, ac porttitor felis lorem ac sem. Aliquam bibendum id mi in aliquam
+            </p>
+        </div>
+        <div class="col-md-6" style="margin-top: 15px">
+            <img src="GEOPics/profile_blank.png" style="margin-left: 120px" />
+            <h2>John Smith</h2>
+            <p>
+                Short bio description here. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris ornare, diam
+                eu posuere venenatis, nisl odio varius lectus, ac porttitor felis lorem ac sem. Aliquam bibendum id mi in aliquam
+            </p>
+        </div>
+        <div class="col-md-6" style="margin-top: 15px">
+            <img src="GEOPics/profile_blank.png" style="margin-left: 120px" />
+            <h2>Jane Smith</h2>
             <p>
                 Short bio description here. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris ornare, diam
                 eu posuere venenatis, nisl odio varius lectus, ac porttitor felis lorem ac sem. Aliquam bibendum id mi in aliquam
