--- a/GoldenEagleOrganics/alfalfa.html
+++ b/GoldenEagleOrganics/alfalfa.html
@@ -64,7 +64,7 @@
                                 <li><a href="farming.html">Custom Farming</a></li>
                             </ul>
                         </li>
-                        <li class="hvr-wobble-horizontal"><a href="services.html">About</a></li>
+                        <li class="hvr-wobble-horizontal"><a href="about.html">About</a></li>
                         <li class="hvr-wobble-horizontal"><a href="contact.html">Contact</a></li>
                     </ul>
                 </div>
