Added tons of site pics
moo

--- a/GoldenEagleOrganics/about.html
+++ b/GoldenEagleOrganics/about.html
@@ -75,7 +75,7 @@
     <div class="container" style="padding: 190px 0 0 0 !important">
         <div class="row">
             <div class="col-md-12" style="margin-top: 15px; text-align: center; background-color: #B88D47; color: white">
-                <img src="GEOPics/placeholder.png" width="500" style="margin-top: 15px" />
+                <img src="GEOPics/owners01.jpg" width="500" style="margin-top: 15px" />
                 <h2 style="color: #404040">- About The Owners Of GEO -</h2>
                 <p>
                     The Lepore Family (Brian, Emily, Gus, Claudia and Bodhi the dog) migrated to Central Oregon from East-Central Indiana in 2012.
@@ -94,56 +94,59 @@
         </div>
         <h2 style="text-align: center; color: #404040">Meet the GEO Team!</h2>
         <hr />
-        <div class="col-md-6" style="margin-top: 15px">
-            <img src="GEOPics/profile_blank.png" style="margin-left: 120px" />
+        <div class="col-md-6 text-center" style="margin-top: 15px">
+            <img src="GEOPics/brian01.png" />
             <h2>Brian Lepore</h2>
             <p>
                 Short bio description here. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris ornare, diam
                 eu posuere venenatis, nisl odio varius lectus, ac porttitor felis lorem ac sem. Aliquam bibendum id mi in aliquam
             </p>
         </div>
-        <div class="col-md-6" style="margin-top: 15px">
-            <img src="GEOPics/profile_blank.png" style="margin-left: 120px" />
+        <div class="col-md-6 text-center" style="margin-top: 15px">
+            <img src="GEOPics/emily01.png" />
             <h2>Emily Lepore</h2>
             <p>
                 Short bio description here. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris ornare, diam
                 eu posuere venenatis, nisl odio varius lectus, ac porttitor felis lorem ac sem. Aliquam bibendum id mi in aliquam
             </p>
         </div>
-        <div class="col-md-6" style="margin-top: 15px">
-            <img src="GEOPics/profile_blank.png" style="margin-left: 120px" />
+        <div class="col-md-6 text-center" style="margin-top: 15px">
+            <img src="GEOPics/gus01.png" />
             <h2>Gus Lepore</h2>
             <p>
                 Short bio description here. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris ornare, diam
                 eu posuere venenatis, nisl odio varius lectus, ac porttitor felis lorem ac sem. Aliquam bibendum id mi in aliquam
             </p>
         </div>
-        <div class="col-md-6" style="margin-top: 15px">
-            <img src="GEOPics/profile_blank.png" style="margin-left: 120px" />
+        <div class="col-md-6 text-center" style="margin-top: 15px">
+            <img src="GEOPics/claudia01.png" />
             <h2>Claudia Lepore</h2>
             <p>
                 Short bio description here. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris ornare, diam
                 eu posuere venenatis, nisl odio varius lectus, ac porttitor felis lorem ac sem. Aliquam bibendum id mi in aliquam
             </p>
         </div>
-        <div class="col-md-6" style="margin-top: 15px">
-            <img src="GEOPics/profile_blank.png" style="margin-left: 120px" />
+        <div class="col-md-6 text-center" style="margin-top: 15px">
+            <img src="GEOPics/guy01.png" />
             <h2>John Smith</h2>
             <p>
                 Short bio description here. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris ornare, diam
                 eu posuere venenatis, nisl odio varius lectus, ac porttitor felis lorem ac sem. Aliquam bibendum id mi in aliquam
             </p>
         </div>
-        <div class="col-md-6" style="margin-top: 15px">
-            <img src="GEOPics/profile_blank.png" style="margin-left: 120px" />
-            <h2>Jane Smith</h2>
+        <div class="col-md-6 text-center" style="margin-top: 15px">
+            <img src="GEOPics/bodhi01.png" />
+            <h2>Bodhi Lepore</h2>
             <p>
                 Short bio description here. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris ornare, diam
                 eu posuere venenatis, nisl odio varius lectus, ac porttitor felis lorem ac sem. Aliquam bibendum id mi in aliquam
             </p>
         </div>
     </div>
-    <footer class="text-center" style="min-height: 100px; background-color: #b88d47; margin-top: 250px">
+    <div class="text-center">
+        <p style="margin-top: 100px">Website designed & built by <a href="https://www.linkedin.com/in/devin-magee-3698ba70">Devin Magee</a></p>
+    </div>
+    <footer class="text-center" style="min-height: 100px; background-color: #b88d47; margin-top: 100px">
         <a href="index.html">
             <img src="GEOPics/GEOCrest.png" width="80" style="padding-top: 10px" />
         </a>        <h2 style="font-family:'Times New Roman', Times, serif; color: white; font-weight: 700; display: inline; vertical-align: middle; margin-left: 15px; margin-right: 25px">GOLDEN EAGLE ORGANICS, INC.</h2>
