--- a/GoldenEagleOrganics/contact.html
+++ b/GoldenEagleOrganics/contact.html
@@ -93,7 +93,10 @@
             <a class="hvr-pop" href="mailto:brian@goldeneagleorganics.com"><img src="GEOPics/emailLogo.jpg" width="50" style="padding: 5px" title="Email GEO" /></a>
         </div>
     </div>
-    <footer class="text-center" style="min-height: 100px; background-color: #b88d47; margin-top: 250px">
+    <div class="text-center">
+        <p style="margin-top: 100px">Website designed & built by <a href="https://www.linkedin.com/in/devin-magee-3698ba70">Devin Magee</a></p>
+    </div>
+    <footer class="text-center" style="min-height: 100px; background-color: #b88d47; margin-top: 100px">
         <a href="index.html">
             <img src="GEOPics/GEOCrest.png" width="80" style="padding-top: 10px" />
         </a>
