--- a/GoldenEagleOrganics/alfalfa.html
+++ b/GoldenEagleOrganics/alfalfa.html
@@ -88,16 +88,16 @@
                         <img class="img-responsive pic-preview" src="GEOPics/alfalfa01.jpg" style="width: 100%" title="" alt="">
                     </div>
                     <div class="item">
-                        <img class="img-responsive pic-preview" src="GEOPics/placeholder.png" style="width: 100%" title="" alt="">
+                        <img class="img-responsive pic-preview" src="GEOPics/alfalfa02.jpg" style="width: 100%" title="" alt="">
                     </div>
                     <div class="item">
-                        <img class="img-responsive pic-preview" src="GEOPics/placeholder.png" style="width: 100%" title="" alt="">
+                        <img class="img-responsive pic-preview" src="GEOPics/alfalfa03.jpg" style="width: 100%" title="" alt="">
                     </div>
                     <div class="item">
-                        <img class="img-responsive pic-preview" src="GEOPics/placeholder.png" style="width: 100%" title="" alt="">
+                        <img class="img-responsive pic-preview" src="GEOPics/alfalfa04.jpg" style="width: 100%" title="" alt="">
                     </div>
                     <div class="item">
-                        <img class="img-responsive pic-preview" src="GEOPics/placeholder.png" style="width: 100%" title="" alt="">
+                        <img class="img-responsive pic-preview" src="GEOPics/alfalfa05.jpg" style="width: 100%" title="" alt="">
                     </div>
                 </div>
                 <!-- Controls -->
