--- a/GoldenEagleOrganics/farming.html
+++ b/GoldenEagleOrganics/farming.html
@@ -88,16 +88,16 @@
                         <img class="img-responsive pic-preview" src="GEOPics/custFarmServ01.jpg" style="width: 100%" title="" alt="">
                     </div>
                     <div class="item">
-                        <img class="img-responsive pic-preview" src="GEOPics/placeholder.png" style="width: 100%" title="" alt="">
+                        <img class="img-responsive pic-preview" src="GEOPics/custFarmServ02.jpg" style="width: 100%" title="" alt="">
                     </div>
                     <div class="item">
-                        <img class="img-responsive pic-preview" src="GEOPics/placeholder.png" style="width: 100%" title="" alt="">
+                        <img class="img-responsive pic-preview" src="GEOPics/custFarmServ03.jpg" style="width: 100%" title="" alt="">
                     </div>
                     <div class="item">
-                        <img class="img-responsive pic-preview" src="GEOPics/placeholder.png" style="width: 100%" title="" alt="">
+                        <img class="img-responsive pic-preview" src="GEOPics/custFarmServ04.jpg" style="width: 100%" title="" alt="">
                     </div>
                     <div class="item">
-                        <img class="img-responsive pic-preview" src="GEOPics/placeholder.png" style="width: 100%" title="" alt="">
+                        <img class="img-responsive pic-preview" src="GEOPics/custFarmServ05.jpg" style="width: 100%" title="" alt="">
                     </div>
                 </div>
                 <!-- Controls -->
