--- a/GoldenEagleOrganics/goat.html
+++ b/GoldenEagleOrganics/goat.html
@@ -88,16 +88,16 @@
                         <img class="img-responsive pic-preview" src="GEOPics/goat01.jpg" style="width: 100%" title="" alt="">
                     </div>
                     <div class="item">
-                        <img class="img-responsive pic-preview" src="GEOPics/placeholder.png" style="width: 100%" title="" alt="">
+                        <img class="img-responsive pic-preview" src="GEOPics/goat02.jpg" style="width: 100%" title="" alt="">
                     </div>
                     <div class="item">
-                        <img class="img-responsive pic-preview" src="GEOPics/placeholder.png" style="width: 100%" title="" alt="">
+                        <img class="img-responsive pic-preview" src="GEOPics/goat03.jpg" style="width: 100%" title="" alt="">
                     </div>
                     <div class="item">
-                        <img class="img-responsive pic-preview" src="GEOPics/placeholder.png" style="width: 100%" title="" alt="">
+                        <img class="img-responsive pic-preview" src="GEOPics/goat04.jpg" style="width: 100%" title="" alt="">
                     </div>
                     <div class="item">
-                        <img class="img-responsive pic-preview" src="GEOPics/placeholder.png" style="width: 100%" title="" alt="">
+                        <img class="img-responsive pic-preview" src="GEOPics/goat05.jpg" style="width: 100%" title="" alt="Picture of Nicholas Speed Covey with the goats">
                     </div>
                 </div>
                 <!-- Controls -->
