--- a/GoldenEagleOrganics/index.html
+++ b/GoldenEagleOrganics/index.html
@@ -94,10 +94,10 @@
                         <img class="img-responsive pic-preview" src="GEOPics/geo03.jpg" style="width: 100%" title="" alt="">
                     </div>
                     <div class="item">
-                        <img class="img-responsive pic-preview" src="GEOPics/placeholder.png" style="width: 100%" title="" alt="">
+                        <img class="img-responsive pic-preview" src="GEOPics/geo04.jpg" style="width: 100%" title="" alt="">
                     </div>
                     <div class="item">
-                        <img class="img-responsive pic-preview" src="GEOPics/placeholder.png" style="width: 100%" title="" alt="">
+                        <img class="img-responsive pic-preview" src="GEOPics/geo05.jpg" style="width: 100%" title="" alt="">
                     </div>
                 </div>
                 <!-- Controls -->
